<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/groupe_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_student_group"
            android:textColor="#0E0005"
            android:textSize="14dp"
            android:layout_marginRight="8dp"/>
        <TextView
            android:id="@+id/student_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TD1"
            android:textColor="#0E0005"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstname_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        app:layout_constraintRight_toLeftOf="@id/famillyname_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupe_layout"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_firstname"
            android:textColor="#797979"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Chiheb Eddine"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/famillyname_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/firstname_layout"
        app:layout_constraintTop_toBottomOf="@id/groupe_layout"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_famillyname"
            android:textColor="#797979"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="KEBBAS"
            android:textSize="20dp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/chiheb_avatar"
        app:layout_constraintBottom_toTopOf="@id/send_message_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname_layout" />

    <LinearLayout
        android:id="@+id/send_message_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/message_hint"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_button"/>

    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>